# micro

./: .gitignore  .npmignore  .terraform.lock.hcl  README.md  aws.js  bun.lockb  example.tf.json  main.js  main.tf.json  micro.tf.json  package-lock.json  package.json  pnpm-lock.yaml  state._tf.json  terraform.tfstate  terraform.tfstate.backup  test.ipynb  tsconfig.json
.github/workflows/: deploy.yml
examples/: api.ts  constants.ts  dockered.ts  example.ts  index.ts  lambda.ts  micro.ts  module.ts  route53.ts  sns.ts  zipped.ts
functions/docker/: README.md  micro.json
functions/dockerme/: micro.json
functions/dockerwithdefaults/: micro.json
functions/multipart_upload/: index.py  micro.json  pyproject.toml
functions/zip/: micro.json
functions/zipme/: micro.json
lambdas/docker/: app.py  requirements.txt
lambdas/http_tester/: index.py  micro.json
lambdas/multipart_upload/: micro.json
lambdas/template/: handler.py  package.json  pnpm-lock.yaml
lambdas/upload_mp/: index.py  micro.json
lib/examples/: module.d.ts  (+3 more)
modules/: lambda-efs.ts  vpc.ts
registry/: index.ts
repl/: aws_lambda_function.json  aws_lambda_function.md  aws_wafv2_rule_group.json  debug_md2json.md  debug_regex.ts  deduper.ts  empty_obj-quicktype-test.json  module.ts  partitioner.ts  quicktype-output.ts  quicktype-test.json  quicktype-test.ts  test-qt-interfaces.ts  top.json  typelines-test.ts  types-test.ts  xf-assets.ts
spec/: config.spec.ts
src/: cli.ts  config.ts  constants.ts  index.ts  micro.ts  types.ts  xf-assets.ts
tfbuilder/: LICENSE  README.md  package.json
(+7370 files in other folders)
