[tool.poetry]
name = "multipart_upload"
version = "0.1.0"
description = "generates presigned AWS S3 URLs for file get/post"
authors = ["loganpowell <loganp@tepper.cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.35"
botocore = "^1.31.35"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
ipykernel = "^6.25.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"